--- a/.gitignore
+++ b/.gitignore
@@ -152,3 +152,46 @@ MNIST_data/
 data/pictures/predicted_pictures/
 feature/*.csv
 ##----R----##
+
+
+
+## cpp
+# binary
+bin/
+
+# Prerequisites
+*.d
+
+# Compiled Object files
+*.slo
+*.lo
+*.o
+*.obj
+
+# Precompiled Headers
+*.gch
+*.pch
+
+# Compiled Dynamic libraries
+*.so
+*.dylib
+*.dll
+
+# Fortran module files
+*.mod
+*.smod
+
+# Compiled Static libraries
+*.lai
+*.la
+*.a
+*.lib
+
+# Executables
+*.exe
+*.out
+*.app
+
+# clion
+.idea/
+cmake-build-debug/
